
[package]
name = "torfile"
version = "0.2.0"
edition = "2021"
 
# Build with:  cargo build --release
# Requires:   aria2c  (sudo apt install aria2  OR  sudo pacman -S aria2)
 
[dependencies]
tokio      = { version = "1",    features = ["full"] }
ratatui    = "0.29"
crossterm  = "0.28"
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
anyhow     = "1"
base64     = "0.22"
urlencoding = "2"
reqwest    = { version = "0.12", features = ["json"] }
dirs       = "5"
 
[profile.release]
opt-level  = 3
lto        = true
strip      = true
 